--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,9 @@ dependencies {
 
     compile 'com.google.android.things.contrib:driver-button:0.4'
     compile 'com.android.support:palette-v7:26.0.0'
+    compile 'com.google.firebase:firebase-database:11.4.0'
+
 
 }
+
+apply plugin: 'com.google.gms.google-services'
